[project]
name = "mache"
dynamic = ["version"]
authors = [
    { name="Xylar Asay-Davis", email="xylar@lanl.gov" },
    { name="Althea Denlinger", email="althea@lanl.gov" }
]
description = "A package for providing configuration data related to E3SM supported machines."
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    # these are only for searching/browsing projects on PyPI
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",

    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]

dependencies = [
    "importlib_resources",
    "jinja2",
    "lxml",
    "packaging",
    "pyyaml",
    "requests",
    "termcolor",
    "tqdm"
]

[project.optional-dependencies]
docs = [
    # building documentation
    "sphinx >=7.0.0",
    "sphinx_rtd_theme",
    "myst-parser",
]

dev = [
    # linting and testing
    "pip",
    "pytest",
    "flynt",
    "mypy",
    "pre-commit",
    "ruff",
]

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = ["docs", "conda"]
line-length = 79

[tool.ruff.lint]
# E501 - max line-length
# E4 - whitespace
# E7 - multiple-statements
# E9 - trailing-whitespace
# F - Enable Pyflakes
# B - Enable flake8-bugbear
# W - Enable pycodestyle
# C901 - complex-structure
# D - Enable flake8-docstrings
select = ["E501", "E4", "E7", "E9", "F", "B", "W", "C901"]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint.mccabe]
# Flag errors (`C901`) whenever the complexity level exceeds 18.
max-complexity = 18

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[build-system]
requires = ["setuptools>=60"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["docs", "conda", "tests"]

[tool.setuptools.dynamic]
version = { attr = "mache.version.__version__" }

# evolution of options.entry-points
[project.scripts]
mache = "mache.__main__:main"

[project.urls]
Documentation = "https://docs.e3sm.org/mache"
"Bug Tracker" = "https://github.com/E3SM-Project/mache/issues"
