[metadata]
name = mache
version = 1.0.0
author = Xylar Asay-Davis
author_email = xylar@lanl.gov
description = A package for providing configuration data relate to E3SM supported machines
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/E3SM-Project/mache
project_urls =
    Bug Tracker = https://github.com/E3SM-Project/mache/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires =
   lxml

[options.data_files]
data =
    mache/cime_machine_config/config_compilers.xml
    mache/cime_machine_config/config_machines.xml
    mache/machines/*.cfg
