[metadata]
name = mache
version = 1.9.0rc1
author = Xylar Asay-Davis
author_email = xylar@lanl.gov
description = A package for providing configuration data relate to E3SM supported machines
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/E3SM-Project/mache
project_urls =
    Bug Tracker = https://github.com/E3SM-Project/mache/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = True
python_requires = >=3.8
install_requires =
   lxml
   jinja2
   pyyaml
   progressbar2

[options.entry_points]
console_scripts =
    mache = mache.__main__:main
