[metadata]
name = mache
version = 1.21.0rc1
author = Xylar Asay-Davis
author_email = xylar@lanl.gov
description = A package for providing configuration data relate to E3SM supported machines
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/E3SM-Project/mache
project_urls =
    Bug Tracker = https://github.com/E3SM-Project/mache/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = True
python_requires = >=3.8
install_requires =
   importlib_resources
   jinja2
   lxml
   pyyaml
   progressbar2

[options.entry_points]
console_scripts =
    mache = mache.__main__:main


[flake8]
# https://pep8.readthedocs.io/en/latest/intro.html#error-codes
ignore =
    # line break after operator
    W504
# Max width of Github code review is 79 characters
max-line-length = 79
max-complexity = 18
per-file-ignores =
    */__init__.py: F401
exclude =
    .git,
    docs,
    .idea,
    .mypy_cache,
    .pytest_cache,

[isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=79
skip=
    e3sm_diags/e3sm_diags_driver.py

[pycodestyle]
max-line-length = 79
exclude =
    .git
    docs
    .idea
    .mypy_cache
    .pytest_cache

[mypy]
python_version = 3.10
check_untyped_defs = True
ignore_missing_imports = True
warn_unused_ignores = True
warn_redundant_casts = True
warn_unused_configs = True
